# context-jetpack

./: .gitignore  README.md  pyproject.toml  zoo-project.json
src/contextjetpack/: __init__.py  chat_pack.py  cli.py  compiler.py  defaults.py  registry.py  storage.py  ui.py
tests/: test_chat_pack.py  test_compiler.py  test_registry.py  test_storage.py  test_ui.py
